--- a/app/views/emails/_template_create.html.erb
+++ b/app/views/emails/_template_create.html.erb
@@ -21,15 +21,16 @@
 
 tinymce.init({
      selector: "textarea.tinymce",
-     theme: "modern",
+     theme: "advanced",
      plugins: [
       "advlist autolink lists link image charmap print preview hr anchor pagebreak",
       "searchreplace wordcount visualblocks visualchars code fullscreen",
       "insertdatetime media nonbreaking save table contextmenu directionality",
-      "emoticons template paste textcolor "
+      "emoticons template paste textcolor ",
+      "uploadimage"
      ],
      toolbar1: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
-     toolbar2: "print preview media | forecolor backcolor emoticons",
+     toolbar2: "print preview media | forecolor backcolor emoticons | uploadimage",
      image_advtab: true,
      templates: [
       {title: 'Test template 1', content: '<b>Test 1</b>'},
