--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -1,3 +1,4 @@
+<!--- Complete registration form except applications are in separate partials -->
 <%= nested_form_for(@registration,:html=>{:multipart => true })  do |f| %>
 
   <%= f.hidden_field :ref_no, value: (@registration.ref_no.nil? ? @ref_no : @registration.ref_no) %>
