--- a/app/views/registrations/_details.html.erb
+++ b/app/views/registrations/_details.html.erb
@@ -71,7 +71,7 @@ English Language Proficiency
             <li><label>
               Exam Type </label>: 
               
-                <%= e.exam_type.name %>
+                <%= e.exam_type.name rescue "Unknown" %>
               
             </li>
             
