--- a/app/views/email_templates/_form.html.erb
+++ b/app/views/email_templates/_form.html.erb
@@ -40,7 +40,9 @@
                 <br/>
                 <div class="cl"></div> 
                 <%= f.submit "Create",{class: 'btnp fr'} %>
-
+<div class="cl"></div> 
+<br/>
+                <br/>
           </div>
     <% end %>
     </div>
