--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,7 +95,7 @@
      onMouseOver="MM_swapImage('iconMM6','','/images/icons/org_emailb.png',1)">
         <img src="/images/icons/org_email.png"  id="iconMM6"/><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
-        <a href="#">Email</a></li>
+        <%= link_to "Emails", email_templates_path %></li>
         <li id="calendarMM"  onMouseOut="MM_swapImgRestore()"
      onMouseOver="MM_swapImage('iconMM7','','/images/icons/org_calenderb.png',1)">
         <img src="/images/icons/org_calender.png" id="iconMM7" /><br/>
