--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= nested_form_for(@enquiry) do |f| %>
+<%= nested_form_for(@enquiry, :html => {:onsubmit => "return validateAll(this);"}) do |f| %>
   <% if @enquiry.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@enquiry.errors.count, "error") %> prohibited this enquiry from being saved:</h2>
