deactivated enquiries, users_configs

--- a/app/views/enquiries/_follow_up.html.erb
+++ b/app/views/enquiries/_follow_up.html.erb
@@ -62,8 +62,8 @@
             
                         <div class="cols" id="more_fields" style="display:none;">
                           <%= fbox(g,[:ends_at,:class => "dateTimeField caltf"],"text_field",nil) %>
-                          <%= fbox(g,[:api,:style => "white-space:normal"],"check_box",nil,"Add to google calendar ?") %>
-                          <%= fbox(g,:remind_before,"text_field") %> minutes
+                          <%= fbox(g,[:api,:style => "white-space:normal"],"check_box",nil,"Add To Google?") %>
+                          <%= fbox(g,:remind_before,"text_field") %>
                           <%= fbox(g,:venue,"text_field") %>
                         </div>
                     </div>
