--- a/app/views/enquiries/_timeline.html.erb
+++ b/app/views/enquiries/_timeline.html.erb
@@ -1,7 +1,7 @@
 <% @timelines.each do |t| %>
 <br/>
-<li>
-  <%= image_tag "/images/icons/"+ t.action.to_s + ".png",{class: "fl", width: "35"} %>
+
+  <%= image_tag "/images/icons/"+ t.action.to_s  + "_tl.png",{class: "fl", width: "35"} %>
   &nbsp;&nbsp;&nbsp;
   <h4>
   <%= t.comment %>
