--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,7 @@ src: url('/font/century_gothic.ttf')
 /* DEFAULT STYLE - STARTS */
 *{margin: 0;padding: 0;border: 0;}
 body{font-family:centuryGothic;color:#444444;font-size: 0.8em;font-weight:normal;text-align:left;margin:0;padding:0;}
-a, .a1{color:#00336C;text-decoration:none;font-size:12px}
+a, .a1{color:#00336C;text-decoration:none;font-size:12px;font-weight:normal;}
 a:hover,a:visited,a:active,a1:hover,a1:visited,a1:active{text-decoration:none;cursor:pointer;}
 a:hover,a1:hover{color:#FD9B00;cursor:pointer;}
 p {line-height: 18px;margin: 5px 0 0 0;padding: 0;}
@@ -403,7 +403,7 @@ body > * {visibility: hidden;}
 
 /* POPUP - STARTS */
 .popuptitlemsg{font-size:14px;font-weight:bold;color:#444;padding:5px 10px 5px 10px;background:#d3d7cf} 
-.popuptitle{font-size:14px;font-weight:bold;color:#fff;padding:5px 10px 5px 10px;background:#d3d7cf} 
+.popuptitle{font-size:14px;font-weight:bold;color:#444;padding:5px 10px 5px 10px;background:#d3d7cf} 
 .addNewPop {padding: 0;border: 1px solid #ccc;box-shadow: 0 0 5px #ccc;border-radius: 5px;display: none;position: absolute;z-index: 100000000000;
 background: #fff;overflow:hidden}
 .popupc{padding:25px 25px 25px 25px;text-align:left !important;font-size:16px;}
