--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -5,8 +5,7 @@
   <tr>
       <th>
       <%= check_box_tag "master",nil,false,{id: "master_check",checked: false, onclick: "toggleAllCheck(this,'#{_id}');"} %>
-
-      Actions
+      <%= label_tag :actions %>
       </th>
       <% @cols.each do |i| %>
         <% if i.is_a?(Array) %>
@@ -26,7 +25,7 @@
        <span class="fr" onclick="$('.dataTables_filter input').val('').keyup();"> &nbsp;&nbsp;Reset&nbsp;</span>
        
        <%= select_tag :abdc,
-                      options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift("Search by")),
+                      options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["Choose",""])),
                       {id: "mySelect",style: "width:150px",class: "fr"} %>
                       
       
@@ -69,9 +68,14 @@
 <script>
 
 $(function(){
+
 dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>");
 setColorsFromSession();
 activeMM("enquiriesMM");
+
+
+
+
 });
 </script>
             
