--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -54,7 +54,7 @@
               <div class="frbox">
                 <%= image_tag "/images/icons/folder_delete.png" ,{size: "20x20"}%>
                 <h5>Are you sure about this group delete?</h5>
-                <span class="btnp" onclick="groupDelete('#{_id}');"> Yes </span>
+                <span class="btnp" onclick="groupDelete('<%= _id %>');"> Yes </span>
                 <span class="btnp" onclick="$('#<%= div_delete_id %>').hide();"> No </span>
               </div>
             </div>
